# mana

./: .gitmodules  CMakeLists.txt  main.c  mana.c  mana.h  mana_a.h  mana_lexing.c
sublime/: mana.sublime-syntax  mana.tmPreferences
